k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tasky
  labels:
    app.kubernetes.io/part-of: wiz-exercise
